<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2012-present Sonatype, Inc. All rights reserved.

    This program is licensed to you under the Apache License Version 2.0,
    and you may not use this file except in compliance with the Apache License Version 2.0.
    You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.

    Unless required by applicable law or agreed to in writing,
    software distributed under the Apache License Version 2.0 is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.buildsupport</groupId>
    <artifactId>public-parent</artifactId>
    <version>33</version>
    <relativePath/>
  </parent>

  <groupId>org.sonatype.install4j</groupId>
  <artifactId>install4j-support</artifactId>
  <name>${project.groupId}:${project.artifactId}</name>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <url>https://sonatype.github.io/install4j-support</url>
  <inceptionYear>2012</inceptionYear>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/sonatype/install4j-support.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/sonatype/install4j-support.git</developerConnection>
    <url>https://github.com/sonatype/install4j-support</url>
  </scm>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/sonatype/install4j-support/issues</url>
  </issueManagement>

  <developers>
    <developer>
      <id>jdillon</id>
      <name>Jason Dillon</name>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <!--<id>ingokegel</id>-->
      <name>Ingo Kegel</name>
      <url>https://www.ej-technologies.com/</url>
    </contributor>
  </contributors>

  <repositories>
    <repository>
      <id>ejt</id>
      <name>ej-technologies</name>
      <url>https://maven.ej-technologies.com/repository</url>
    </repository>
  </repositories>

  <distributionManagement>
    <site>
      <id>github-project-site</id>
      <url>gitsite:git@github.com/sonatype/install4j-support.git</url>
    </site>
  </distributionManagement>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <revision>1.4.0-SNAPSHOT</revision>

    <install4j.version>6.1.3</install4j.version>
    <install4j.home>NOT_CONFIGURED</install4j.home>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.install4j</groupId>
        <artifactId>install4j-runtime</artifactId>
        <version>${install4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.sonatype.sisu.goodies</groupId>
        <artifactId>goodies-testsupport</artifactId>
        <version>1.15</version>
      </dependency>

      <!-- INTERNAL -->

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>install4j-slf4j</artifactId>
        <version>${revision}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}j</groupId>
        <artifactId>install4j-common</artifactId>
        <version>${revision}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>install4j-ga</artifactId>
        <version>${revision}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>install4j-ga</artifactId>
        <classifier>bundle</classifier>
        <type>zip</type>
        <version>${revision}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>install4j-maven-plugin</artifactId>
        <version>${revision}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>install4j-slf4j</module>
    <module>install4j-common</module>
    <module>install4j-ga</module>
    <module>install4j-maven-plugin</module>
  </modules>

  <build>
    <extensions>
      <!-- Configure gitsite wagon for site deployment https://github.com/stephenc/wagon-gitsite -->
      <!--
      FIXME: Just found that github has some maven plugins, investigate use of it instead:

          https://github.com/github/maven-plugins

      NOTE: This plugin does not presently support multi-module projects, so it can not be used.
      -->
      <extension>
        <groupId>org.apache.maven.scm</groupId>
        <artifactId>maven-scm-provider-gitexe</artifactId>
        <version>1.13.0</version>
      </extension>

      <extension>
        <groupId>org.apache.maven.scm</groupId>
        <artifactId>maven-scm-manager-plexus</artifactId>
        <version>1.13.0</version>
      </extension>

      <extension>
        <groupId>com.github.stephenc.wagon</groupId>
        <artifactId>wagon-gitsite</artifactId>
        <version>0.5</version>
      </extension>
    </extensions>

    <defaultGoal>install</defaultGoal>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.4.1</version>
          <configuration>
            <source>1.8</source>
          </configuration>
        </plugin>

        <!-- INTERNAL -->

        <plugin>
          <groupId>${project.groupId}</groupId>
          <artifactId>install4j-maven-plugin</artifactId>
          <version>2.0.0-SNAPSHOT</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-wrapper-plugin</artifactId>
        <version>3.1.1</version>
      </plugin>

      <plugin>
        <groupId>com.outbrain.swinfra</groupId>
        <artifactId>ci-friendly-flatten-maven-plugin</artifactId>
        <version>1.0.14</version>
        <configuration>
          <outputDirectory>${project.build.directory}</outputDirectory>
        </configuration>
        <executions>
          <execution>
            <goals>
              <!-- Ensure proper cleanup. Will run on clean phase-->
              <goal>clean</goal>
              <!-- Enable ci-friendly version resolution. Will run on process-resources phase-->
              <goal>flatten</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>checks</id>
            <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <rules>
            <requireMavenVersion>
              <version>[3.5,)</version>
            </requireMavenVersion>
            <requireJavaVersion>
              <version>[8,)</version>
            </requireJavaVersion>
            <requireNoRepositories>
              <banRepositories>false</banRepositories>
            </requireNoRepositories>
          </rules>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>animal-sniffer-maven-plugin</artifactId>
        <version>1.22</version>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <signature>
                <groupId>org.codehaus.mojo.signature</groupId>
                <artifactId>java18</artifactId>
                <version>1.0</version>
              </signature>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.12.1</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.doxia</groupId>
            <artifactId>doxia-module-markdown</artifactId>
            <version>1.11.1</version>
          </dependency>
        </dependencies>
        <configuration>
          <inputEncoding>UTF-8</inputEncoding>
          <outputEncoding>UTF-8</outputEncoding>
        </configuration>
        <executions>
          <execution>
            <id>attach-descriptor</id>
            <goals>
              <goal>attach-descriptor</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <additionalOptions>
            <!-- Turn off strict javadoc checks in Java-8 -->
            <option>-Xdoclint:none</option>
          </additionalOptions>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.18.0</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>

      <plugin>
        <groupId>com.github.spotbugs</groupId>
        <artifactId>spotbugs-maven-plugin</artifactId>
        <version>4.7.1.1</version>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
      </plugin>
    </plugins>
  </reporting>

</project>
